--- a/packages/nodes-base/package.json
+++ b/packages/nodes-base/package.json
@@ -96,6 +96,7 @@
             "dist/credentials/SlackApi.credentials.js",
             "dist/credentials/Sms77Api.credentials.js",
             "dist/credentials/Smtp.credentials.js",
+            "dist/credentials/SftpAPI.credentials.js",
             "dist/credentials/StripeApi.credentials.js",
             "dist/credentials/SalesmateApi.credentials.js",
             "dist/credentials/SegmentApi.credentials.js",
@@ -222,6 +223,7 @@
             "dist/nodes/Rundeck/Rundeck.node.js",
             "dist/nodes/Set.node.js",
             "dist/nodes/Shopify/Shopify.node.js",
+            "dist/nodes/SFTP/SFTPTrigger.node.js",
             "dist/nodes/Shopify/ShopifyTrigger.node.js",
             "dist/nodes/Slack/Slack.node.js",
             "dist/nodes/Sms77/Sms77.node.js",
@@ -284,6 +286,7 @@
         "typescript": "~3.7.4"
     },
     "dependencies": {
+        "@types/ssh2": "^0.5.43",
         "aws4": "^1.8.0",
         "basic-auth": "^2.0.1",
         "change-case": "^4.1.1",
@@ -310,6 +313,7 @@
         "request": "^2.88.2",
         "rhea": "^1.0.11",
         "rss-parser": "^3.7.0",
+        "ssh2": "^0.8.9",
         "uuid": "^3.4.0",
         "vm2": "^3.6.10",
         "xlsx": "^0.14.3",
